[package]
name = "splitubam"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "*"
rayon = "*"
clap = { version = "4.5.4", features = ["derive"] }
seq_io = "0.3.2"

[profile.release]
lto = true

